--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.8.2",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "rellax": "^1.12.1"
   }
 }
