--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.10.1",
+    "@types/rellax": "^1.7.7",
     "nuxt": "^3.8.2",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "rellax": "^1.12.1"
+    "rellax": "^1.12.1",
+    "vue-rellax": "^0.2.0"
   }
 }
