Selected category page done

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "rellax": "^1.12.1"
+    "rellax": "^1.12.1",
+    "swiper": "^11.0.5"
   }
 }
