--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "rellax": "^1.12.1",
+    "tailwindcss": "^3.4.0",
     "vue-rellax": "^0.2.0"
   }
 }
