--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.1.0",
     "@nuxtjs/google-fonts": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@types/rellax": "^1.7.7",
@@ -22,9 +23,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "rellax": "^1.12.1",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.0",
-    "vue-rellax": "^0.2.0",
-    "swiper": "^11.0.5"
-
+    "vue-rellax": "^0.2.0"
   }
 }
