--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxtjs/netlify-files": "^1.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "rellax": "^1.12.1",
